first working version of tseries-config

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,10 @@
-llAUTOMAKE_OPTIONS=foreign
+AUTOMAKE_OPTIONS=foreign
 
 ACLOCAL_AMFLAGS = -I m4
 
 etctseriesdir = $(sysconfdir)/tseries/$(PVERSION)
 dist_etctseries_DATA = \
 	etc/tseries.ctl            \
-	etc/tsDiagrams.def         \
 	etc/symbols.def		   \
 	etc/tseries.filter	   \
 	etc/tseries-bookmarks.common \
@@ -14,35 +13,36 @@ dist_etctseries_DATA = \
 
 styledir        = $(datarootdir)/tseries/@PVERSION@/style
 dist_style_DATA = \
-	share/style/style.lameps_t2m            \
-	share/style/style.marinogram		 \
-	share/style/style.eps_rr24		 \
-	share/style/style.t2mqgram		 \
-	share/style/style.eps_rrt2m		 \
-	share/style/style.rrqgram		 \
-	share/style/style.fxqgram		 \
-	share/style/style.lameps_ff		 \
-	share/style/style.proff_combi		 \
-	share/style/style.webogram		 \
-	share/style/style.meteogram_batch	 \
-	share/style/style.snow_meteogram	 \
-	share/style/style.lameps_rr		 \
-	share/style/style.lameps_plum_rr         \
-	share/style/style.eps_rr		 \
-	share/style/style.eps_plum_rr            \
-	share/style/style.eps_rr24t2m_noens_op	 \
-	share/style/style.maritim		 \
-	share/style/style.lameps_z500		 \
-	share/style/style.meteogram		 \
-	share/style/style.meteogram_ff           \
-	share/style/style.eps_z500		 \
-	share/style/style.eps_t2m                \
-	share/style/style.proff_edit             \
-	share/style/style.glameps_z500           \
-	share/style/style.glameps_t2m            \
-	share/style/style.glameps_rr             \
-	share/style/style.glameps_ff             \
-	share/style/style.accumprecip
+	share/style/tsDiagrams.def\
+	share/style/accumprecip.style           \
+	share/style/eps_rr24.style		\
+	share/style/eps_rr24t2m_noens_op.style	\
+	share/style/eps_rr.style		\
+	share/style/eps_rrt2m.style		\
+	share/style/eps_t2m.style		\
+	share/style/eps_z500.style		\
+	share/style/fxqgram.style		\
+	share/style/glameps_ff.style		\
+	share/style/glameps_rr.style		\
+	share/style/glameps_t2m.style		\
+	share/style/glameps_z500.style		\
+	share/style/lameps_ff.style		\
+	share/style/lameps_plum_rr.style	\
+	share/style/lameps_rr.style		\
+	share/style/lameps_t2m.style		\
+	share/style/lameps_z500.style		\
+	share/style/marinogram.style		\
+	share/style/maritim.style		\
+	share/style/meteogram_batch.style	\
+	share/style/meteogram_ff.style		\
+	share/style/meteogram.style		\
+	share/style/proff_combi.style		\
+	share/style/proff_edit.style		\
+	share/style/rrqgram.style		\
+	share/style/snow_meteogram.style	\
+	share/style/t2mqgram.style		\
+	share/style/webogram.style		
+
 
 
 
