fixes from last package - uncommitted until now....

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,10 +14,11 @@ dist_etctseries_DATA = \
 styledir        = $(datarootdir)/tseries/@PVERSION@/style
 dist_style_DATA = \
 	style/tsDiagrams.def\
-	style/accumprecip.style		  \
+	style/accumprecip.style		\
 	style/eps_rr24.style		\
-	style/eps_rr24t2m_noens_op.style	\
+	style/eps_rr24t2m_noens_op.style\
 	style/eps_rr.style		\
+	style/eps_plum_rr.style         \
 	style/eps_rrt2m.style		\
 	style/eps_t2m.style		\
 	style/eps_z500.style		\
@@ -25,7 +26,7 @@ dist_style_DATA = \
 	style/glameps_ff.style		\
 	style/glameps_rr.style		\
 	style/glameps_t2m.style		\
-	style/glameps_z500.style		\
+	style/glameps_z500.style	\
 	style/lameps_ff.style		\
 	style/lameps_plum_rr.style	\
 	style/lameps_rr.style		\
@@ -34,7 +35,7 @@ dist_style_DATA = \
 	style/marinogram.style		\
 	style/maritim.style		\
 	style/meteogram_batch.style	\
-	style/meteogram_ff.style		\
+	style/meteogram_ff.style	\
 	style/meteogram.style		\
 	style/proff_combi.style		\
 	style/proff_edit.style		\
