short fix to make fimex  usable at VV and VNN in 6.2 until the date-stamped netcdf files show up

--- a/etc/tseries.ctl.in
+++ b/etc/tseries.ctl.in
@@ -541,36 +541,6 @@ Contents=x,x,ECMWF_WAM,12
 
 
 
-
-
-# -------------------------------------------------
-
-
-
-CollectionName=FimexData
-PreferredDiagram=Meteogram
-InitialOpen=0
-
-[VTK]
-DataFile=$(Adata)/vtk/AROME_Norway25_vtk_20??????T??Z.nc
-DataDescription=AROME-PP
-DataType=netcdf
-Contents=x,x,AROME-PP,x
-
-[VNN:VA:VV:FOU:OFFLINE]
-DataFile=$(Adata)/arome_norway_default2_5km_20??????_??.nc
-DataDescription=AROME-PP
-DataType=netcdf
-Contents=x,x,AROME-PP,x
-
-
-DataFile=$(Adata)/t2m500yrKF??.nc
-DataDescription=T2M_PP
-DataType=netcdf
-Contents=x,x,T2M_PP,x
- 
-[]
-
 # -------------------------------------------------
 
 
@@ -638,6 +608,51 @@ WVFD,0,x,OBS,x=COMPUTE
 TAM,0,x,OBS,x=TAM
 TANM,0,x,OBS,x=TANM
 TAXM,0,x,OBS,x=TAXM
+
+
+
+
+
+
+# ------------------------------------------------
+#
+#     F I M E X 
+#
+# -------------------------------------------------
+
+<streams>
+
+CollectionName=FimexData
+PreferredDiagram=Meteogram
+InitialOpen=0
+
+[VTK]
+DataFile=$(Adata)/vtk/AROME_Norway25_vtk_20??????T??Z.nc
+DataDescription=AROME-PP
+DataType=netcdf
+Contents=x,x,AROME-PP,x
+
+[VA:FOU:OFFLINE]
+DataFile=$(Adata)/arome_norway_default2_5km_20??????_??.nc
+DataDescription=AROME-PP
+DataType=netcdf
+Contents=x,x,AROME-PP,x
+
+[VNN:VV]
+DataFile=$(Adata)/AROME_Norway25_??_DEF.nc
+DataDescription=AROME-PP
+DataType=netcdf
+Contents=x,x,AROME-PP,x
+
+
+[VNN:VA:VV:FOU:OFFLINE]
+DataFile=$(Adata)/t2m500yrKF??.nc
+DataDescription=T2M_PP
+DataType=netcdf
+Contents=x,x,T2M_PP,x
+ 
+[]
+
 
 
 <fimexParameters>
