--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 7.0.50), autotools-dev,
 Build-Conflicts: autoconf2.13, automake1.4
 Standards-Version: 3.8.4
 
-Package: tseriesconfig-6.4
+Package: tseriesconfig-myanmar
 Architecture: all
 Depends: ${misc:Depends}
 Recommends: catchcrash
