--- a/etc/tseries.ctl.in
+++ b/etc/tseries.ctl.in
@@ -22,6 +22,10 @@ Styles=$(Prefix)/share/tseries/@PVERSION@/style
 
 #------------------
 
+<klima>
+url=localhost
+
+
 <files>
 
 Defs=$(Styles)/tsDiagrams.def
