added localhost for klima to avoid polling

--- a/etc/tseries.ctl.in
+++ b/etc/tseries.ctl.in
@@ -21,6 +21,10 @@ Styles=$(Prefix)/share/tseries/@PVERSION@/style
 
 #------------------
 
+<klima>
+url=localhost
+
+
 <files>
 
 Defs=$(Styles)/tsDiagrams.def
