--- a/etc/tseries.ctl.in
+++ b/etc/tseries.ctl.in
@@ -133,11 +133,13 @@ MSLP,x,x,x = netcdf | air_pressure_at_sea_level         | hPa
 TT,x,x,x   = netcdf | air_temperature_2m                | Celsius
 UU,x,x,x   = netcdf | x_wind_10m                        | kt
 VV,x,x,x   = netcdf | y_wind_10m                        | kt
-#FG,x,x,x   = netcdf | fog_area_fraction                 | 0.01
+FG,x,x,x   = netcdf | fog_area_fraction                 | 0.01
 CL,x,x,x   = netcdf | low_type_cloud_area_fraction      | 0.01
 CM,x,x,x   = netcdf | medium_type_cloud_area_fraction   | 0.01
 CH,x,x,x   = netcdf | high_type_cloud_area_fraction     | 0.01
 RRAC,x,x,x = netcdf | precipitation_amount_acc          | kg/m^2
+CC,x,x,x   = netcdf | cloud_area_fraction               | 0.01
+
 
 #WAVE
 HST,x,x,x  = netcdf | sea_surface_wave_significant_height       | m 
