--- a/etc/tseries.ctl.in
+++ b/etc/tseries.ctl.in
@@ -17,8 +17,8 @@ datasrc=vietnam
 # put in Datadirectory here
 HDFdatadir=/opdata/metcorr
 NCdatadir=/mnt/data/ADPC/EC/data_$(datasrc)/nc4
-
-
+GFSdatadir=/mnt/data/ADPC/GFS
+WRFdatadir=/mnt/data/ADPC/WRF
 
 
 #------------------
@@ -53,7 +53,7 @@ commonBookmarks=$(Etc)/tseries-bookmarks.common
 # run man date for formatting help
 
 <fimex>
-FimexStreamTypes= netcdf 
+FimexStreamTypes= netcdf : ncml
 
 
 <wdb>
@@ -125,7 +125,21 @@ DataDescription=ECWAVE
 DataType=netcdf 
 Contents=x,x,ECWAVE,x
 
- 
+
+DataFile=$(GFSdatadir)/20????????.nc
+DataDescription=GFS
+DataType=netcdf 
+Contents=x,x,GFS,x
+DataConfig=$(GFSdatadir)/gfs_vn.ncml
+
+
+DataFile=$(WRFdatadir)/wrf_cdo_train_20??-??-??_??.nc
+DataDescription=WRF
+DataType=netcdf 
+Contents=x,x,WRF,x
+DataConfig=$(WRFdatadir)/wrf_cdo_ncap.ncml
+
+
 <fimexParameters>
 # PETSPAR   = TYPE | fimexname                | Unit | extradim1 start1 len1 | extradim2 ...
 
@@ -140,6 +154,8 @@ CH,x,x,x   = netcdf | high_type_cloud_area_fraction     | 0.01
 RRAC,x,x,x = netcdf | precipitation_amount_acc          | kg/m^2
 CC,x,x,x   = netcdf | cloud_area_fraction               | 0.01
 RH,x,x,x   = netcdf | relative_humidity_pl              | 1 | isobaric 14 1
+
+
 #WAVE
 HST,x,x,x  = netcdf | sea_surface_wave_significant_height       | m 
 HSP,x,x,x  = netcdf | significant_wind_wave_height              | m
