--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,7 @@ Source: tseriesconfig
 Section: science
 Priority: extra
 Maintainer: Norwegian Meteorological Institute met.no <diana@met.no>
-Build-Depends: debhelper (>= 7.0.50), autotools-dev,
- metno-devscripts (>= 0.3.2)
+Build-Depends: debhelper (>= 7.0.50), autotools-dev
 Build-Conflicts: autoconf2.13, automake1.4
 Standards-Version: 3.8.4
 
