--- a/etc/tseries.ctl.in
+++ b/etc/tseries.ctl.in
@@ -8,7 +8,10 @@ Sysconfdir= @sysconfdir@
 
 # put in Datadirectory here
 HDFdatadir=/opdata/metcorr
-NCdatadir=/disk1/opdata_offline
+NCdatadir=/mnt/data/ADPC/EC/data_myanmar/nc4
+GFSdatadir=/mnt/data/ADPC/GFS
+WRFdatadir=/mnt/data/ADPC/WRF
+
 
 #------------------
 
@@ -69,20 +72,15 @@ newsURL=https://wiki.met.no/tseries/news
 
 # -------------------------------------------------
 
-CollectionName=ECMeteogrammer
-PreferredDiagram=Meteogram
-InitialOpen=0
+#CollectionName=ECMeteogrammer
+#PreferredDiagram=Meteogram
+#InitialOpen=0
 
 
-DataFile=$(HDFdatadir)/ecatmo_myanmar00.hdf
-DataDescription=ECMWF12
-DataType=HDF
-Contents=x,x,ECMWF,12
-
-DataFile=$(HDFdatadir)/ecatmo_myanmar12.hdf
-DataDescription=ECMWF00
-DataType=HDF
-Contents=x,x,ECMWF,00
+#DataFile=$(HDFdatadir)/ecatmo_myanmar00.hdf
+#DataDescription=ECMWF12
+#DataType=HDF
+#Contents=x,x,ECMWF,12
 
 
 
@@ -105,12 +103,28 @@ InitialOpen=0
 
 # widcard example arome_norway_default2_5km_20??????_??.nc
 
-DataFile=$(NCdatadir)/2008.nc
+DataFile=$(NCdatadir)/myanmar_atmos_20??????_??.nc
+DataDescription=ECATMO
+DataType=netcdf 
+Contents=x,x,ECATMO,x
+
+DataFile=$(NCdatadir)/vietnam_wave_20??????_??.nc
+DataDescription=ECWAVE
+DataType=netcdf 
+Contents=x,x,ECWAVE,x
+
+DataFile=$(GFSdatadir)/gfs_0p25_20??????_??_6h.nc
+DataDescription=GFS
+DataType=netcdf 
+Contents=x,x,GFS,x
+#DataConfig=$(GFSdatadir)/gfs_vn.ncml
+
+
+DataFile=$(WRFdatadir)/wrf_cdo_train_20??-??-??_??.nc
 DataDescription=WRF
 DataType=netcdf : wrf
 Contents=x,x,WRF,x
- 
-
+DataConfig=$(WRFdatadir)/wrf_cdo_ncap.ncml
 
 
 <fimexParameters>
@@ -125,6 +139,8 @@ CL,x,x,x   = netcdf | low_type_cloud_area_fraction      | 0.01
 CM,x,x,x   = netcdf | medium_type_cloud_area_fraction   | 0.01
 CH,x,x,x   = netcdf | high_type_cloud_area_fraction     | 0.01
 RRAC,x,x,x = netcdf | precipitation_amount_acc          | kg/m^2
+CC,x,x,x   = netcdf | cloud_area_fraction               | 0.01
+RH,x,x,x   = netcdf | relative_humidity_pl              | 1 | isobaric 14 1
 # Postprocessed temperature - alias...
 TTPP,x,x,x = netcdf | air_temperature_2m                | Celsius
 
@@ -139,3 +155,12 @@ CL,x,x,x   = wrf | CLDFRA                           | 1   | bottom_top 10 1
 CM,x,x,x   = wrf | CLDFRA                           | 1   | bottom_top 15 1
 CH,x,x,x   = wrf | CLDFRA                           | 1   | bottom_top 20 1
 RRAC,x,x,x = wrf | RAINNC                           | mm
+
+#WAVE
+HST,x,x,x  = netcdf | sea_surface_wave_significant_height       | m 
+HSP,x,x,x  = netcdf | significant_wind_wave_height              | m
+DDPP,x,x,x = netcdf | sea_surface_wind_wave_to_direction        | degree
+HSD,x,x,x  = netcdf | sea_surface_swell_wave_significant_height | m
+TSD,x,x,x  = netcdf | sea_surface_swell_wave_period             | s 
+
+
