--- a/etc/tseries.ctl.in
+++ b/etc/tseries.ctl.in
@@ -117,6 +117,11 @@ DataDescription=ECWAVE
 DataType=netcdf 
 Contents=x,x,ECWAVE,x
 
+DataFile=$(GFSdatadir)/GFS_0p5/gfs_0p5_20??????_??.nc
+DataDescription=GFS 0.5 deg
+DataType=netcdf 
+Contents=x,x,GFS,x
+
 DataFile=$(GFSdatadir)/gfs_0p25_20??????_??.nc
 DataDescription=GFS
 DataType=netcdf 
@@ -164,6 +169,7 @@ CL,x,x,x   = netcdf | low_type_cloud_area_fraction      | 0.01
 CM,x,x,x   = netcdf | medium_type_cloud_area_fraction   | 0.01
 CH,x,x,x   = netcdf | high_type_cloud_area_fraction     | 0.01
 RRAC,x,x,x = netcdf | precipitation_amount_acc          | kg/m^2
+RR,x,x,x = netcdf | precipitation_amount_acc_6h          | kg/m^2
 CC,x,x,x   = netcdf | cloud_area_fraction               | 0.01
 RH,x,x,x   = netcdf | relative_humidity_pl              | 1 | isobaric 14 1
 
@@ -172,9 +178,12 @@ RH,x,x,x   = netcdf | relative_humidity_pl              | 1 | isobaric 14 1
 #WAVE
 HST,x,x,x  = netcdf | sea_surface_wave_significant_height       | m 
 HSP,x,x,x  = netcdf | significant_wind_wave_height              | m
-DDPP,x,x,x = netcdf | sea_surface_wind_wave_to_direction        | degree
+DDPP,x,x,x = netcdf | sea_surface_wind_wave_to_direction        | degree @ 180
 HSD,x,x,x  = netcdf | sea_surface_swell_wave_significant_height | m
 TSD,x,x,x  = netcdf | sea_surface_swell_wave_period             | s 
+TST,x,x,x  = netcdf | mean_wave_period                    | s     
+TSP,x,x,x  = netcdf | sea_surface_wind_wave_period        | s
+DDPD,x,x,x = netcdf | sea_surface_swell_wave_to_direction | degree @ 180 
 
 
 # EPS ----------------------------------------------------------------------------
