--- a/configure.ac
+++ b/configure.ac
@@ -1,10 +1,11 @@
 AC_PREREQ(2.59)
-AC_INIT([tseriesconfig], [6.9.0], [diana@met.no])
+AC_INIT([tseriesconfig], [7.0.0], [diana@met.no])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE
 METNO_PVERSION
 AC_CONFIG_FILES([
 	Makefile
 	etc/tseries.ctl
+	share/metno-tseries.desktop
 ])
 AC_OUTPUT
